--- a/vue/index.html
+++ b/vue/index.html
@@ -75,7 +75,8 @@
         
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    <script src="js/vue.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
