--- a/vue/index.html
+++ b/vue/index.html
@@ -36,7 +36,7 @@
                                     <input type="text" ref="descripcion" class="form-control" placeholder="Descripcion del tipo" aria-label="Tipo" aria-describedby="basic-addon1" required>
                                 </div>
                             <div class="btn-group btn-block"> 
-                                <input type="button"  value="Guardar Registro" class="btn btn-success" ref="boton" @click="Post_Tipo()">
+                                <input type="button"  value="Guardar Registro" class="btn btn-success" ref="boton" @click="Accion_Tipo()">
                                 <button type="reset" @click="Limpiar()" class="btn btn-danger">Cancelar</button>
                             </div>
                         </form>
